Bug 149556 - bug on editable location bar when pressing "escape" button
Summary: bug on editable location bar when pressing "escape" button
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-09-05 08:45 UTC by Haris Kouzinopoulos
Modified: 2007-09-09 13:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Haris Kouzinopoulos 2007-09-05 08:45:16 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

Steps to reproduce:

Right click on the navigation bar and select Edit
Start typing e.g. cod to select the directory coding
Press escape (the user changed his mind)

Dolphin will try to enter the non existent directory ~/cod
Comment 1 Peter Penz 2007-09-09 13:00:11 UTC
SVN commit 710230 by ppenz:

Don't set the uncommitted URL when switching to the breadcrumb view.

BUG: 149556

 M  +0 -2      kurlnavigator.cpp  


--- trunk/KDE/kdelibs/kfile/kurlnavigator.cpp #710229:710230
@@ -444,8 +444,6 @@
     updateContent();
     if (q->isUrlEditable()) {
         m_pathBox->setFocus();
-    } else {
-        q->setUrl(m_pathBox->currentText());
     }
     emit q->requestActivation();
 }