Don't set the uncommitted URL when switching to the breadcrumb view.

BUG: 149556

svn path=/trunk/KDE/kdelibs/; revision=710230